# course_buddy_light

./: README.md  config.yaml  config.yaml.example  pyproject.toml
course_buddy_v2/: canvas_api.py  cli.py  config.py  llm_providers.py  notes.py  replay_api.py  transcript_api.py
course_buddy_v2.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
